address deprecations and explicitly declare maven plugin versions